fix overflow styles

--- a/public/assets/styles/styles.sass
+++ b/public/assets/styles/styles.sass
@@ -45,7 +45,8 @@ ul
     max-width: $containerWidth
     margin: 0 auto
     height: 100%
-    overflow: scroll
+    overflow-x: hidden
+    overflow-y: scroll
 
 .message
   position: relative
@@ -106,7 +107,8 @@ ul
     bottom: 0
     height: 50px
     width: 100%
-    overflow: hidden
+    overflow-x: hidden
+    overflow-y: scroll
     background: rgba(255,255,255,.15)
     background-size: cover
     box-shadow: 0 0 20px 0 rgba(0,0,0,.4)
@@ -187,7 +189,8 @@ ul
     background: rgba(41, 65, 111, 0.57)
     padding: 25px 25px 0
     height: 100%
-    overflow: scroll
+    overflow-x: hidden
+    overflow-y: scroll
   &-title
     font-size: 16px
     margin-bottom: 7px
